# CharacterCounter.rs

./: Cargo.toml  Readme.md  fonts.css  index.html  manifest.json  service_worker.js  trunk.toml  yew-cc-195d18c78e761ec3.js  yew-cc-195d18c78e761ec3_bg.wasm  yew-cc.js
.github/workflows/: pages.yml
assets/fonts/: Epilogue-Black.eot  Epilogue-BoldItalic.eot  Epilogue-ExtraBold.eot  Epilogue-ExtraLight.eot  Epilogue-Medium.eot  Epilogue-MediumItalic.eot  Epilogue-Regular.eot  Epilogue-SemiBoldItalic.eot
fonts/: Epilogue-BlackItalic.eot  Epilogue-Bold.eot  Epilogue-ExtraBoldItalic.eot  Epilogue-ExtraLightItalic.eot  Epilogue-Italic.eot  Epilogue-Light.eot  Epilogue-LightItalic.eot  Epilogue-SemiBold.eot  Epilogue-Thin.eot  Epilogue-ThinItalic.eot
src/: header.rs  main.rs  textinput.rs
