[package]
name = "yew-cc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
stylist = {version = "0.10", features = ["yew_integration"]}
styled-yew = "0.3.0"
gloo-events = "0.1"
web-sys = "0.3.60"
weblog = "0.3.0"
wasm-bindgen = "0.2.83"